# MyParallelComputingServer

./: 15-1processpool.h  15-2process_pool_cgi  15-2process_pool_cgi.cpp  CGI  CGI.cpp  README.md  client  client.cpp  testCGI.cgi
Client/: client  client.cpp
ComputingService/: CMakeLists.txt
ComputingService/include/: myInv.h  myinverse.h  myinverse_initialize.h  myinverse_terminate.h  myinverse_types.h  rtwtypes.h
ComputingService/src/: main.cpp  myinverse.cpp  myinverse_initialize.cpp  myinverse_terminate.cpp
ProcessPoolServer/: process_pool_server  process_pool_server.cpp
